--- a/KöHenger_UnitTest/KöHenger_UnitTest.csproj
+++ b/KöHenger_UnitTest/KöHenger_UnitTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Kör_Teszt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Henger_Teszt.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
